--- a/index/css/estilos.css
+++ b/index/css/estilos.css
@@ -1,15 +1,23 @@
 body {
   text-align: center;
-  font-family: "Ubuntu";
+  font-family: "Ubuntu", "sans-serif";
+}
+
+header {
+  margin: 2rem;
+}
+
+footer {
+  margin: 2rem;
 }
 
 label {
-  font-size: 2rem;
+  font-size: 1.25rem;
+  text-align: left;
 }
 
 input {
   font-size: 1.5rem;
-  margin: 10px;
   border: 3px solid black;
 }
 
