--- a/scss/base/_typo.scss
+++ b/scss/base/_typo.scss
@@ -2,3 +2,8 @@
     font-family: "Ubuntu";
     src:url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
 }
+
+@font-face {
+    font-family: "Estonia";
+    src: url('https://fonts.googleapis.com/css2?family=Estonia&display=swap');
+}
