--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,7 +1,9 @@
 //colores
 $color_principal:grey;
 $color_secundario:lightgrey;
-$color_fondo:white;
+$color_menu:rgb(189, 189, 189);
+$color_menu_secundario:rgb(226, 226, 226);
+$menu_borde:rgb(255, 2, 2);
 
 $negro:black;
 $blanco:white;
