--- a/scss/main.css
+++ b/scss/main.css
@@ -10,6 +10,11 @@
   src: url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
 }
 
+@font-face {
+  font-family: "Estonia";
+  src: url("https://fonts.googleapis.com/css2?family=Estonia&display=swap");
+}
+
 body {
   font-size: 1.7rem;
   font-family: "Ubuntu",sans-serif;
@@ -17,12 +22,10 @@ body {
   text-align: center;
 }
 
-img {
-  margin: 15px;
-}
-
 form {
   margin: 30px;
+  display: block;
+  clear: both;
 }
 
 label {
@@ -30,6 +33,15 @@ label {
 }
 
 input {
+  -webkit-box-shadow: 2px 2px 10px black;
+          box-shadow: 2px 2px 10px black;
+}
+
+input:hover {
+  background-color: lightgrey;
+}
+
+input[type=text] {
   margin: 10px;
   height: 1.5rem;
   width: 15rem;
@@ -37,7 +49,129 @@ input {
   border: 3px solid black;
 }
 
-input:hover {
+input[type=password] {
+  margin: 10px;
+  height: 1.5rem;
+  width: 15rem;
+  font-size: 1.2rem;
+  border: 3px solid black;
+}
+
+input[type=date] {
+  margin: 10px;
+  height: 1.5rem;
+  width: 15rem;
+  font-size: 1.2rem;
+  cursor: pointer;
+  border: 3px solid black;
+}
+
+input[type=submit] {
+  cursor: pointer;
+  height: 1.5rem;
+  width: 10rem;
+  font-size: 1.2rem;
+  border: 3px solid black;
+}
+
+input[type=submit]:hover {
   background-color: lightgrey;
+}
+
+select {
+  margin: 10px;
+  height: 1.5rem;
+  width: 10rem;
+  font-size: 1.2rem;
+  border: 3px solid black;
+}
+
+select:hover {
+  background-color: lightgrey;
+}
+
+nav {
+  clear: both;
+}
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  background-color: #bdbdbd;
+  position: relative;
+  float: left;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li:hover {
+  color: #ff0202;
+  background-color: #e2e2e2;
+  border-bottom: 2px solid #ff0202;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+nav ul li:hover a:hover {
+  color: #ff0202;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+nav ul a {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 1.7rem;
+  font-style: none;
+  letter-spacing: 1px;
+  color: black;
+  background-color: none;
+  display: block;
+  text-decoration: none;
+  padding: 10px;
+}
+
+nav ul ul {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  padding: 0;
+}
+
+nav ul ul li {
+  float: none;
+  width: 170px;
+}
+
+nav ul ul a {
+  line-height: 120%;
+  padding: 10px 15px;
+}
+
+nav ul li:hover > ul {
+  display: block;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+header {
+  background-color: #bdbdbd;
+}
+
+header img {
+  float: left;
+  height: 300px;
+}
+
+header h1 {
+  font-family: "Estonia",normal;
+  text-align: center;
+  padding-top: 4rem;
+  padding-right: 3rem;
+  padding-bottom: 200px;
 }
 /*# sourceMappingURL=main.css.map */
