--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
 //utilites
 @import "utilities/variables";
 @import "utilities/mixins";
-@import "utilities/mixins";
+
 
 //base
 @import "base/reset";
@@ -10,4 +10,6 @@
 
 //components
 @import "components/formulario";
+@import "components/menu";
+@import "components/encabezado";
 
