--- a/scss/components/_formulario.scss
+++ b/scss/components/_formulario.scss
@@ -16,8 +16,11 @@ input
     box-shadow: 2px 2px 10px black;
     &:hover
     {
-        background-color: $color_secundario;
+        border-color: darkblue;
+        box-shadow: 2px 2px 10px darkblue;
     }
+    cursor: text;
+
 }
 
 input[type=text]
@@ -52,10 +55,16 @@ input[type=submit]
     cursor: pointer;
     @include tamano(1.5rem,10rem);
     font-size: $texto_s;
+    background-color: $blanco;
     &:hover
     {
+        box-shadow: 2px 2px 10px darkblue;
+        
+    }
+    &:active{
         background-color: $color_secundario;
     }
+
     @include bordes(3px,solid,black);
 }
 
@@ -70,4 +79,25 @@ select
     }
     @include bordes(3px,solid,black);
 
+}
+
+
+
+#error
+{
+    
+    background-color: rgb(255, 130, 130);
+    @include bordes(3px,solid,red);
+    border-radius: 10px;
+    margin: 2rem;
+    
+}
+
+#acierto
+{
+    
+    background-color: rgb(109, 255, 109);
+    @include bordes(3px,solid,rgb(0, 248, 0));
+    border-radius: 10px;
+    margin: 2rem;
 }
