--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -20,6 +20,7 @@ nav
                 a:hover
                 {
                     color: $menu_borde;
+                    padding: 15px;
                     transition: 0.5s;
                 }
                 color: $menu_borde;
