--- a/scss/main.css
+++ b/scss/main.css
@@ -6,13 +6,21 @@
 }
 
 @font-face {
-  font-family: "Ubuntu";
-  src: url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
+  font-family: 'Estonia';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/estonia/v5/7Au_p_4ijSecA1yHOCr2z3wM.woff2) format("woff2");
+  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
 }
 
 @font-face {
-  font-family: "Estonia";
-  src: url("https://fonts.googleapis.com/css2?family=Estonia&display=swap");
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/ubuntu/v15/4iCv6KVjbNBYlgoC1CzjvWyNL4U.woff2) format("woff2");
+  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 
 body {
@@ -35,10 +43,13 @@ label {
 input {
   -webkit-box-shadow: 2px 2px 10px black;
           box-shadow: 2px 2px 10px black;
+  cursor: text;
 }
 
 input:hover {
-  background-color: lightgrey;
+  border-color: darkblue;
+  -webkit-box-shadow: 2px 2px 10px darkblue;
+          box-shadow: 2px 2px 10px darkblue;
 }
 
 input[type=text] {
@@ -71,10 +82,16 @@ input[type=submit] {
   height: 1.5rem;
   width: 10rem;
   font-size: 1.2rem;
+  background-color: white;
   border: 3px solid black;
 }
 
 input[type=submit]:hover {
+  -webkit-box-shadow: 2px 2px 10px darkblue;
+          box-shadow: 2px 2px 10px darkblue;
+}
+
+input[type=submit]:active {
   background-color: lightgrey;
 }
 
@@ -88,6 +105,20 @@ select {
 
 select:hover {
   background-color: lightgrey;
+}
+
+#error {
+  background-color: #ff8282;
+  border: 3px solid red;
+  border-radius: 10px;
+  margin: 2rem;
+}
+
+#acierto {
+  background-color: #6dff6d;
+  border: 3px solid #00f800;
+  border-radius: 10px;
+  margin: 2rem;
 }
 
 nav {
@@ -118,6 +149,7 @@ nav ul li:hover {
 
 nav ul li:hover a:hover {
   color: #ff0202;
+  padding: 15px;
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
