--- a/scss/components/_encabezado.scss
+++ b/scss/components/_encabezado.scss
@@ -5,16 +5,16 @@ header
     img
     {
         float: left;
-        height: 300px;
+        height: 50px;
     }
 
     h1
     {
-        font-family: "Estonia",normal;
-        text-align: center;
-        padding-top: 4rem;
-        padding-right: 3rem;
-        padding-bottom: 200px;
+        font-family: "Estonia",sans-serif;
+        text-align: right;
+        padding-top: 2rem;
+        padding-right: 2rem;
+        padding-bottom: 30px;
     }
 
 
