--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,6 +1,6 @@
 body
 {
-    font-size: $texto_m;
+    font-size: $texto_s;
     font-family:"Ubuntu",sans-serif;
     color: $negro;
     text-align: center;
