--- a/scss/main.css
+++ b/scss/main.css
@@ -24,7 +24,7 @@
 }
 
 body {
-  font-size: 1.7rem;
+  font-size: 1.2rem;
   font-family: "Ubuntu",sans-serif;
   color: black;
   text-align: center;
@@ -43,7 +43,6 @@ label {
 input {
   -webkit-box-shadow: 2px 2px 10px black;
           box-shadow: 2px 2px 10px black;
-  cursor: text;
 }
 
 input:hover {
@@ -53,6 +52,7 @@ input:hover {
 }
 
 input[type=text] {
+  cursor: text;
   margin: 10px;
   height: 1.5rem;
   width: 15rem;
@@ -61,6 +61,7 @@ input[type=text] {
 }
 
 input[type=password] {
+  cursor: text;
   margin: 10px;
   height: 1.5rem;
   width: 15rem;
@@ -100,11 +101,27 @@ select {
   height: 1.5rem;
   width: 10rem;
   font-size: 1.2rem;
+  cursor: pointer;
   border: 3px solid black;
 }
 
 select:hover {
   background-color: lightgrey;
+}
+
+textarea {
+  margin: 10px;
+  font-size: 1.2rem;
+  border: 3px solid black;
+  cursor: text;
+  -webkit-box-shadow: 2px 2px 10px black;
+          box-shadow: 2px 2px 10px black;
+}
+
+textarea:hover {
+  border-color: darkblue;
+  -webkit-box-shadow: 2px 2px 10px darkblue;
+          box-shadow: 2px 2px 10px darkblue;
 }
 
 #error {
@@ -213,7 +230,7 @@ table {
   text-align: left;
   border: 2px solid black;
   margin: 2rem;
-  font-size: 1.2rem;
+  font-size: 15px;
 }
 
 table thead th {
