--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,4 +13,6 @@
 @import "components/menu";
 @import "components/encabezado";
 @import "components/tabla";
+@import "components/divPregunta-Examen";
+@import "components/examen";
 
