--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -5,10 +5,15 @@ $color_menu:rgb(189, 189, 189);
 $color_menu_secundario:rgb(226, 226, 226);
 $menu_borde:rgb(255, 2, 2);
 
+//Blanco y negro
 $negro:black;
 $blanco:white;
 
+//Tamaños
 $texto_s:1.2rem;
 $texto_m:1.7rem;
 $texto_l:2.5rem;
 
+//Tipografias
+$fuente_texto_normal: 'Ubuntu', sans-serif;
+$fuente_texto_titulo:'Oswald', sans-serif;
