--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,7 +1,7 @@
 body
 {
     font-size: $texto_s;
-    font-family:"Ubuntu",sans-serif;
+    font-family:$fuente_texto_normal;
     color: $negro;
     text-align: center;
 }
