--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -26,6 +26,7 @@ nav
                 color: $menu_borde;
                 background-color: $color_menu_secundario;
                 border-bottom: 2px solid $menu_borde;
+                border-top: 2px solid $menu_borde;
 
                 transition: 0.5s;
             }
@@ -69,4 +70,75 @@ nav
             transition:0.5s;
         }
     }
+}
+
+#usuario
+{
+    clear: both;
+    ul
+    {
+        list-style: none;
+        margin: 0px;
+        padding: 0px;
+
+        
+        li
+        {
+            background-color: $color_menu;
+            position: relative;
+            float: left;
+            margin: 0px;
+            padding: 0px;
+            &:hover
+            {
+                a:hover
+                {
+                    color: $menu_borde;
+                    padding: 15px;
+                    transition: 0.5s;
+                }
+                color: $menu_borde;
+                background-color: $color_menu_secundario;
+                border-bottom: 2px solid $menu_borde;
+                cursor: pointer;
+                transition: 0.5s;
+            }
+        }
+        
+        a
+        {
+            @include texto("Ubuntu",sans-serif,$texto_m,none,1px,$negro,none);
+            display: block;
+            text-decoration: none;
+            padding: 10px;
+
+
+        }
+
+        ul
+        {
+            display: none;
+            position: absolute;
+            top: 100%;
+            left:0;
+            padding: 0;
+
+            li
+            {
+                
+                float:none;
+                width: 170px;
+            }
+
+            a
+            {
+                line-height: 120%;
+                padding: 10px 15px;
+            }
+        }
+
+
+
+
+}
 }
