--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -5,6 +5,10 @@ $color_menu:rgb(189, 189, 189);
 $color_menu_secundario:rgb(226, 226, 226);
 $menu_borde:rgb(255, 2, 2);
 
+$color_cabecera_tabla:rgb(197, 197, 197);
+$color_cuerpo_tabla:rgb(238, 238, 238);
+
+
 //Blanco y negro
 $negro:black;
 $blanco:white;
